--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -5,6 +5,43 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Kantinens menu uge 45</h1>
+    
+    <table>
+        <thead>
+            <tr>
+                <th>Dag</th>
+                <th>Varm Ret</th>
+                <th>Kold Ret</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Mandag</td>
+                <td>Spaghetti Bolognese</td>
+                <td>Pastasalat</td>
+            </tr>
+            <tr>
+                <td>Tirsdag</td>
+                <td>Kylling i karry</td>
+                <td>Rugbrødsmadder</td>
+            </tr>
+            <tr>
+                <td>Onsdag</td>
+                <td>Lasagne</td>
+                <td>Salat med tun</td>
+            </tr>
+            <tr>
+                <td>Torsdag</td>
+                <td>Grillet laks</td>
+                <td>Wrap med grøntsager</td>
+            </tr>
+            <tr>
+                <td>Fredag</td>
+                <td>Pandekager med kylling</td>
+                <td>Æg og rejesalat</td>
+            </tr>
+        </tbody>
+    </table>
+
 </div>
