--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -18,8 +18,16 @@ html {
 }
 
 body {
-  margin-bottom: 60px;
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #f4f4f4;
 }
+
 
 table {
     width: 80%;
