--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,44 +4,47 @@
     ViewData["Title"] = "Home page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Kantinens menu uge 45</h1>
-    
-    <table>
-        <thead>
-            <tr>
-                <th>Dag</th>
-                <th>Varm Ret</th>
-                <th>Kold Ret</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Mandag</td>
-                <td>Spaghetti Bolognese</td>
-                <td>Pastasalat</td>
-            </tr>
-            <tr>
-                <td>Tirsdag</td>
-                <td>Kylling i karry</td>
-                <td>Rugbrødsmadder</td>
-            </tr>
-            <tr>
-                <td>Onsdag</td>
-                <td>Lasagne</td>
-                <td>Salat med tun</td>
-            </tr>
-            <tr>
-                <td>Torsdag</td>
-                <td>Grillet laks</td>
-                <td>Wrap med grøntsager</td>
-            </tr>
-            <tr>
-                <td>Fredag</td>
-                <td>Pandekager med kylling</td>
-                <td>Æg og rejesalat</td>
-            </tr>
-        </tbody>
-    </table>
+<div class="container my-5">
+    <div class="text-center">
+        <h1 class="display-4 mb-4">Kantinens Menu - Uge 45</h1>
+    </div>
 
+    <div class="table-responsive">
+        <table class="table table-bordered table-hover shadow-sm">
+            <thead class="table-warning">
+                <tr>
+                    <th scope="col">Dag</th>
+                    <th scope="col">Varm Ret</th>
+                    <th scope="col">Kold Ret</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Mandag</td>
+                    <td>Spaghetti Bolognese</td>
+                    <td>Pastasalat</td>
+                </tr>
+                <tr>
+                    <td>Tirsdag</td>
+                    <td>Kylling i karry</td>
+                    <td>Rugbrødsmadder</td>
+                </tr>
+                <tr>
+                    <td>Onsdag</td>
+                    <td>Lasagne</td>
+                    <td>Salat med tun</td>
+                </tr>
+                <tr>
+                    <td>Torsdag</td>
+                    <td>Grillet laks</td>
+                    <td>Wrap med grøntsager</td>
+                </tr>
+                <tr>
+                    <td>Fredag</td>
+                    <td>Pandekager med kylling</td>
+                    <td>Æg og rejesalat</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
