--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -11,7 +11,7 @@
 
     <div class="table-responsive">
         <table class="table table-bordered table-hover shadow-sm">
-            <thead class="table-warning">
+            <thead>
                 <tr>
                     <th scope="col">Dag</th>
                     <th scope="col">Varm Ret</th>
