--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,7 +1,19 @@
 ﻿@page
+@using Azure.Data.Tables;
+@using Azure;
+
 @model IndexModel
 @{
     ViewData["Title"] = "Home page";
+
+    var tablename = "IBASKantineMenu";
+    var connectionString = "DefaultEndpointsProtocol=https;AccountName=ibasbikeproduction131213;AccountKey=h8F2fwTr7NXt8ThM15XuIp2vtuxgiQBQMOsr1yJj1b2pK5ypNTe90AgtWrBNbgrCFwvR9XylQqhD+ASt0su9rA==;EndpointSuffix=core.windows.net";
+
+    TableClient tableClient = new TableClient(connectionString, tablename);
+    Pageable<TableEntity> entities = tableClient.Query<TableEntity>();
+
+    
+    var menuItems = entities.ToList(); 
 }
 
 <div class="container my-5">
@@ -19,31 +31,14 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>Mandag</td>
-                    <td>Spaghetti Bolognese</td>
-                    <td>Pastasalat</td>
-                </tr>
-                <tr>
-                    <td>Tirsdag</td>
-                    <td>Kylling i karry</td>
-                    <td>Rugbrødsmadder</td>
-                </tr>
-                <tr>
-                    <td>Onsdag</td>
-                    <td>Lasagne</td>
-                    <td>Salat med tun</td>
-                </tr>
-                <tr>
-                    <td>Torsdag</td>
-                    <td>Grillet laks</td>
-                    <td>Wrap med grøntsager</td>
-                </tr>
-                <tr>
-                    <td>Fredag</td>
-                    <td>Pandekager med kylling</td>
-                    <td>Æg og rejesalat</td>
-                </tr>
+                @foreach (var item in menuItems)
+                {
+                    <tr>
+                        <td>@item["Dag"]</td> 
+                        <td>@item["VarmRet"]</td> 
+                        <td>@item["KoldRet"]</td> 
+                    </tr>
+                }
             </tbody>
         </table>
     </div>
