--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -25,7 +25,7 @@ table {
     width: 80%;
     border-collapse: collapse;
     margin: 20px 0;
-    background-color: #fff;
+    background-color: burlywood;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
