--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -65,6 +65,26 @@ tbody tr:hover {
     cursor: pointer;
 }
 
+thead:hover {
+    background-color: #388e3c;
+    color: #fff;
+}
+
+thead tr:hover {
+    background-color: #388e3c;
+    color: #fff;
+}
+
+thead:hover {
+    background-color: #388e3c; 
+    color: #fff;
+}
+
+thead tr:hover {
+    background-color: #388e3c;
+    color: #fff;
+}
+
 @media (max-width: 768px) {
     table {
         width: 100%;
